--- a/.classpath
+++ b/.classpath
@@ -33,5 +33,16 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/lmiklasz/hibernate-search-5.5.4.Final/dist/hibernate-search-engine-5.5.4.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lmiklasz/hibernate-search-5.5.4.Final/dist/hibernate-search-orm-5.5.4.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lmiklasz/hibernate-search-5.5.4.Final/dist/lib/required/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lmiklasz/hibernate-search-5.5.4.Final/dist/lib/required/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lmiklasz/hibernate-search-5.5.4.Final/dist/lib/required/hibernate-commons-annotations-5.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lmiklasz/hibernate-search-5.5.4.Final/dist/lib/required/hibernate-core-5.0.9.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lmiklasz/hibernate-search-5.5.4.Final/dist/lib/required/javassist-3.18.1-GA.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lmiklasz/hibernate-search-5.5.4.Final/dist/lib/required/jboss-logging-3.3.0.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lmiklasz/hibernate-search-5.5.4.Final/dist/lib/required/lucene-core-5.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lmiklasz/hibernate-search-5.5.4.Final/dist/lib/required/xml-apis-1.3.03.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lmiklasz/mariadb-java-client-1.5.0-RC1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
